# cli

./: LICENSE  makefile  pyproject.toml
nestpy_cli/: main.py
nestpy_cli/callbacks/: __init__.py  callback.py  version.py
nestpy_cli/commands/: __init__.py  add.py  build.py  generate.py  info.py  new.py  start.py
nestpy_cli/templates/: controller_file.py  create_template.py  main_file.py  module_file.py  provider_file.py
