[tool.poetry]
name = "nestpy-cli"
version = "0.1.1"
description = ""
authors = ["Manuel S. Lemos <iam@manuelslemos.es>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.scripts]
nestpy = "nestpy_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "0.9.0"}
nestpy-framework = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
